add healthcheck to docker-compose

--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /go/src/{{$pkg}}/{{Name}}
 RUN go build -o /bin/{{Name}}
 
 FROM alpine
+RUN apk add --no-cache curl
 COPY --from=0 /bin/{{Name}} /bin/{{Name}}
 COPY ./{{Name}}.yml /etc/{{Name}}.yml
 
