fix hooks dependency, make curl check PONG

--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   {{Name}}:
     image: ${SERVICE_IMAGE}:${IMAGE_TAG:-dev}
     healthcheck:
-      test: test $$(curl localhost:{{Port}}/_admin/ping) = 200
+      test: test $$(curl localhost:{{Port}}/_admin/ping) = PONG
     build: 
         context: .
         labels:
