--- a/template/Makefile
+++ b/template/Makefile
@@ -52,7 +52,7 @@ glide.lock: glide.yaml
 
 vendor: glide.lock
 	@mkdir -p .glide
-	@$(GLIDE) install --strip-vendor
+	@$(GLIDE) install --force --strip-vendor
 
 $(GOAGEN): vendor
 	@$(DOCKER_CMD) /bin/bash -c 'cd $(@D) && go build'
