new acceptance build through zing-deploy

--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -31,7 +31,9 @@ node('docker') {
         "ROOTDIR=${HOST_WORKSPACE}"]) {
         try {
             stage('Unit tests') {
-                sh("${MAKE} unit-test")
+                ansiColor('xterm') {
+                    sh("${MAKE} unit-test")
+                }
             }
 
             stage('Build image') {
@@ -39,7 +41,9 @@ node('docker') {
             }
 
             stage('API tests') {
-                sh("${MAKE} api-test")
+                ansiColor('xterm') {
+                    sh("${MAKE} api-test")
+                }
             }
 
             stage('Validate test results') {
@@ -81,10 +85,11 @@ node('docker') {
             }
 
             stage('Acceptance tests') {
-                sh("${MAKE} ci/version.yml REGISTRY=${global.PUBLISHER_STAGING}")
+                sh("${MAKE} ci/version.yml")
+                archiveArtifacts artifacts: 'ci/version.yml'
                 build job: env.GLOBAL_ACCEPTANCE_JOB, parameters: [
-                    text(name: 'VERSION', value: readFile('ci/version.yml')),
-                    text(name: 'OVERRIDE_BUILD_ID', value:"{{Name}} PR#${ghprbPullId}")
+                    text(name: 'UPSTREAM_JOB_NAME', value: env.JOB_NAME),
+                    text(name: 'OVERRIDE_BUILD_ID', value:"{{Name}} PR#${ghprbPullId}"),
                 ]
             }
         }
