--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -63,7 +63,7 @@ node('docker') {
             }
         } finally {
             stage ('Clean test environment') {
-                sh("${MAKE} ci-clean")
+                sh("${MAKE} down")
             }
         }
 
