--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -14,6 +14,9 @@ import:
 - package: golang.org/x/tools
   subpackages:
   - go/ast/astutil
+- package: golang.org/x/net
+  subpackages:
+  - websocket
 - package: gopkg.in/yaml.v2
 - package: github.com/spf13/cobra
 - package: github.com/sirupsen/logrus
@@ -24,4 +27,5 @@ import:
 - package: github.com/onsi/gomega
 - package: github.com/cenkalti/backoff
 - package: github.com/snikch/goodman
-
+- package: github.com/spf13/viper
+- package: github.com/fsnotify/fsnotify
