Add version for logrus

--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -22,9 +22,11 @@ import:
 - package: gopkg.in/yaml.v2
 - package: github.com/spf13/cobra
 - package: github.com/sirupsen/logrus
+  version: master
 - package: github.com/Sirupsen/logrus
   repo: git@github.com:/sirupsen/logrus
   vcs: git
+  version: master
 - package: github.com/tylerb/graceful
 - package: github.com/rcrowley/go-metrics
 - package: github.com/onsi/ginkgo
