--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -15,11 +15,11 @@ services:
     ports:
       - "{{Port}}"
     environment:
-      {{Name | toUpper}}_LOG_LEVEL: info
-      {{Name | toUpper}}_HTTP_PORT: {{Port}}
-      {{Name | toUpper}}_AUTH_DISABLED: 1
-      {{Name | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
-      {{Name | toUpper}}_TRACING_ENABLED: 0
+      {{replace Name "-" "_" -1 | toUpper}}_LOG_LEVEL: info
+      {{replace Name "-" "_" -1 | toUpper}}_HTTP_PORT: {{Port}}
+      {{replace Name "-" "_" -1 | toUpper}}_AUTH_DISABLED: 1
+      {{replace Name "-" "_" -1 | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
+      {{replace Name "-" "_" -1 | toUpper}}_TRACING_ENABLED: 0
     secrets:
       - auth_key
 secrets:
