remove admin service from template

--- a/project.json
+++ b/project.json
@@ -2,5 +2,6 @@
   "Name": "helloworld",
   "Title": "Hello World Service",
   "Description": "A sample service to show how the microservice stack works",
-  "Port": "8080"
+  "Port": "8080",
+  "AdminPort": "9000"
 }
