--- a/template/glide.yaml
+++ b/template/glide.yaml
@@ -19,7 +19,7 @@ import:
   version: 1c05540f6879653db88113bc4a2b70aec4bd491f
   subpackages:
   - websocket
-- name: github.com/satori/go.uuid
+- package: github.com/satori/go.uuid
   version: 5bf94b69c6b68ee1b541973bb8e1144db23a194b
 - package: github.com/zenoss/zenkit
   version: 2.1.0
