--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3.3"
 services:
   {{Name}}:
     image: ${SERVICE_IMAGE}:${IMAGE_TAG:-dev}
-    healthcheck:
-      test: test "$$(curl localhost:{{AdminPort}}/ping)" = "PONG"
-    build: 
+    build:
         context: .
         labels:
           zenoss.zing.commit-sha: ${COMMIT_SHA:-none}
@@ -13,16 +11,10 @@ services:
           zenoss.zing.build_number: ${BUILD_ID:-none}
           zenoss.zing.build_url: ${BUILD_URL:-none}
     ports:
-      - "{{Port}}"
+      - "{{Port}}:{{Port}}"
     environment:
-      {{replace Name "-" "_" -1 | toUpper}}_LOG_LEVEL: info
-      {{replace Name "-" "_" -1 | toUpper}}_HTTP_PORT: {{Port}}
-      {{replace Name "-" "_" -1 | toUpper}}_ADMIN_PORT: {{AdminPort}}
-      {{replace Name "-" "_" -1 | toUpper}}_AUTH_DISABLED: 1
-      {{replace Name "-" "_" -1 | toUpper}}_AUTH_KEY_FILE: /run/secrets/auth_key
+      {{replace Name "-" "_" -1 | toUpper}}_LOG_STACKDRIVER: 0
+      {{replace Name "-" "_" -1 | toUpper}}_LOG_LEVEL: debug
+      {{replace Name "-" "_" -1 | toUpper}}_GRPC_LISTEN_ADDR: ":{{Port}}"
       {{replace Name "-" "_" -1 | toUpper}}_TRACING_ENABLED: 0
-    secrets:
-      - auth_key
-secrets:
-  auth_key:
-    file: dev.secret
+      {{replace Name "-" "_" -1 | toUpper}}_AUTH_DISABLED: 1
