--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -1,20 +1,19 @@
 {{ $pkg := print ((print (env "GOPATH") "/src/") | trimPrefix (env "PWD")) "/" Name -}}
-ARG ZENKIT_BUILD_VERSION=1.6.2
+ARG ZENKIT_BUILD_VERSION=1.6.4
 
 FROM zenoss/zenkit-build:${ZENKIT_BUILD_VERSION}
 
 COPY . /go/src/{{$pkg}}
 WORKDIR /go/src/{{$pkg}}
-RUN go-bindata -pkg swagger -o vendor/github.com/zenoss/zenkit/admin/swagger/swagger.go swagger/
-WORKDIR /go/src/{{$pkg}}/{{Name}}
 RUN go build -o /bin/{{Name}}
 
 FROM alpine
 RUN apk add --no-cache curl
+
 COPY --from=0 /bin/{{Name}} /bin/{{Name}}
-COPY ./{{Name}}.yml /etc/{{Name}}.yml
+RUN addgroup -S zing && adduser -S -G zing -u 512 512
+USER 512
 
 EXPOSE {{Port}}
-EXPOSE {{AdminPort}}
 
-CMD ["/bin/{{Name}}", "server"]
+CMD ["/bin/{{Name}}"]
