verify in a container

--- a/template/Makefile
+++ b/template/Makefile
@@ -34,7 +34,8 @@ M = $(shell printf "\033[34;1m▶\033[0m")
 default: init
 
 .PHONY: verify-template
-verify-template: default clean test build
+verify-template: 
+	$(DOCKER_CMD) make default clean test build
 
 .PHONY: docker-compose
 docker-compose: $(DOCKER_COMPOSE)
