--- a/template/Gopkg.toml
+++ b/template/Gopkg.toml
@@ -1,9 +1,9 @@
 [[constraint]]
-  branch = "4.x"
+  version = "=4.0.0"
   name = "github.com/zenoss/zenkit"
 
 [[constraint]]
-  branch = "zenkit-4.x"
+  version = "=1.3.0"
   name = "github.com/zenoss/zing-proto"
 
 [prune]
