--- a/template/Gopkg.toml
+++ b/template/Gopkg.toml
@@ -6,6 +6,10 @@
   version = "=1.3.0"
   name = "github.com/zenoss/zing-proto"
 
+[[override]]
+  branch = "master"
+  name = "github.com/golang/protobuf"
+
 [prune]
   go-tests = true
   unused-packages = true
