--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -23,7 +23,7 @@ node('docker') {
         try {
             stage('Unit tests') {
                 ansiColor('xterm') {
-                    sh("${MAKE} unit-test")
+                    sh("${MAKE} unit-test-containerized")
                 }
             }
 
